[FIXED JENKINS-5622] Allow build queue list to be collapsed

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -323,6 +323,10 @@ td.pane-header {
   font-weight: bold;
 }
 
+td.pane-header > a.collapse {
+	float: right;
+}
+
 th.pane {
   border: 1px #bbb solid;
   font-weight: bold;
